--- a/gatsby-philipps-foam-theme/.eslintrc.json
+++ b/gatsby-philipps-foam-theme/.eslintrc.json
@@ -24,7 +24,10 @@
     "radix": 0,
 
     "react/prop-types": 0,
-    "react/jsx-props-no-spreading": 0
+    "react/jsx-props-no-spreading": 0,
+    "jsx-a11y/label-has-associated-control": {
+      "assert": "htmlFor"
+    }
   },
   "plugins": ["prettier", "react-hooks", "jsx-a11y"],
   "settings": {
